[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langguard-core"
version = "0.1.0"
authors = [
  { name="Mayur Adlak", email="mayuradlak030@gmail.com" },
]
description = "A production-grade, stateful AI agent pipeline with anti-hallucination guardrails."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-groq",
    "langgraph",
    "redis",
    "chromadb",
    "neo4j",
    "pybreaker",
    "python-dotenv",
    "tavily-python",
]

[project.urls]
"Homepage" = "https://github.com/Mayuradlak123/langguard"
"Bug Tracker" = "https://github.com/Mayuradlak123/langguard/issues"
